--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -37,3 +37,26 @@ body {
 .react-course-container {
   text-align: center;
 }
+
+/************************ (media queries) header */
+
+@media (min-width: 1000px) {
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .header-img {
+    width: 4rem;
+    height: 3rem;
+  }
+
+  .title {
+    font-size: 2.5rem;
+  }
+
+  .react-course-container p {
+    font-size: 1.8rem;
+  }
+}
