--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -7,7 +7,7 @@
 
 body {
   cursor: default;
-  font-family: "Karla", Impact, "Haettenschweiler", "Arial Narrow Bold",
+  font-family: "Karla", "Impact", "Haettenschweiler", "Arial Narrow Bold",
     sans-serif;
 }
 
