Change style for meme form.

--- a/meme-generator/src/App.css
+++ b/meme-generator/src/App.css
@@ -60,7 +60,7 @@ body {
   }
 }
 
-/*********************************************************** meme */
+/*********************************************************** meme form */
 .meme-form {
   display: flex;
   flex-direction: column;
@@ -75,6 +75,21 @@ body {
   border-radius: 0.3rem;
   padding-left: 0.4rem;
   font-size: 1.2rem;
+  outline: none;
+  transition: 0.5s;
+}
+
+.meme-input1:focus,
+.meme-input2:focus {
+  border-width: 0.4rem;
+}
+
+.meme-input1:hover {
+  border-color: #672280;
+}
+
+.meme-input2:hover {
+  border-color: #a626d3;
 }
 
 .meme-input1 {
@@ -100,7 +115,18 @@ body {
   align-items: center;
 }
 
+.meme-btn:hover {
+  background: linear-gradient(90deg, #a626d3 1.18%, #672280 100%);
+  font-size: 1.1rem;
+  transition: 0.5s;
+}
+
 .fas.fa-image {
   font-size: 1.5rem;
   margin-left: 0.5rem;
+}
+
+.fas.fa-image :hover {
+  font-size: 1.1rem;
+  transition: 0.5s;
 }
